# graphiti

./: .env.example  Dockerfile.surrealdb  README.md  docker-compose-surrealdb.yml  launch_config.json  pyproject.toml  updated_launch_config.json  verify_db_config.py
graphiti_core/: graphiti.py  graphiti_types.py  helpers.py
graphiti_core/database/: README.md  db_factory.py  db_interface.py  neo4j_adapter.py  surrealdb_adapter.py
mcp_server/: .env.surrealdb  .env.surrealdb.example  Dockerfile  README.md  config.py  docker-compose-surrealdb.yml  graphiti-mcp-server  graphiti-mcp-server-wrapper.js  graphiti_mcp_server.py  index.js  package.json  pyproject.toml  setup.py  setup_surrealdb.sh  surrealdb_patch.py  zep_graphiti.py
server/: pyproject.toml
server/graph_service/: config.py  zep_graphiti.py
